--- a/calculator/templates/calculator/index.html
+++ b/calculator/templates/calculator/index.html
@@ -22,7 +22,7 @@
     <h1>calculator is ready ....</h1>
 
     <form>
-      <div class="row">
+      <div class="form-row">
         <div class="col-5">
           <input
             type="text"
@@ -31,7 +31,8 @@
             name="num1"
           />
         </div>
-        <select class="col-2">
+
+        <select class="col-2" name="opr">
           <option>+</option>
           <option>-</option>
           <option>*</option>
@@ -46,6 +47,8 @@
             name="num1"
           />
         </div>
+        <button type="submit" class="form-control">response</button>
+        <label class="form-control text-center mt-4">answer</label>
       </div>
     </form>
 
