--- a/calculator/templates/calculator/index.html
+++ b/calculator/templates/calculator/index.html
@@ -21,7 +21,8 @@
   <body>
     <h1>calculator is ready ....</h1>
 
-    <form>
+    <form method="POST">
+      {% csrf_token %}
       <div class="form-row">
         <div class="col-5">
           <input
@@ -48,7 +49,9 @@
           />
         </div>
         <button type="submit" class="form-control">response</button>
-        <label class="form-control text-center mt-4">answer</label>
+        <label class="form-control text-center mt-4" value="{{c}}"
+          >out put .....
+        </label>
       </div>
     </form>
 
