--- a/calculator/templates/calculator/index.html
+++ b/calculator/templates/calculator/index.html
@@ -45,13 +45,11 @@
             type="text"
             class="form-control"
             placeholder="second number"
-            name="num1"
+            name="num2"
           />
         </div>
         <button type="submit" class="form-control">response</button>
-        <label class="form-control text-center mt-4" value="{{c}}"
-          >out put .....
-        </label>
+        <label class="form-control text-center mt-4"> {{c}}</label>
       </div>
     </form>
 
