--- a/bmi/templates/bmi/bmi.html
+++ b/bmi/templates/bmi/bmi.html
@@ -51,7 +51,9 @@
           />
         </div>
         <button type="submit" class="form-control">response</button>
-        <label class="form-control text-center mt-4"> {{c}}</label>
+        <label class="form-control text-center mt-4 text-success bg-dark">
+          {{c}}</label
+        >
       </div>
     </form>
 
