--- a/bmi/templates/bmi/bmi.html
+++ b/bmi/templates/bmi/bmi.html
@@ -28,7 +28,7 @@
           <div class="col-sm-12 col-md-4">
             <input
               type="text"
-              class="form-control text-center text-md-left"
+              class="form-control text-left text-md-left"
               placeholder="weight"
               name="weight"
             />
@@ -46,14 +46,14 @@
           <div class="col-sm-12 col-md-4">
             <input
               type="text"
-              class="form-control text-center text-md-left"
+              class="form-control text-left text-md-left"
               placeholder="age"
               name="age"
             />
           </div>
           <button
             type="submit"
-            class="form-control col-md-4 text-center text-md-left"
+            class="btn btn-success mt-sm-5 mt-md-0 col-md-4 text-center text-md-left"
           >
             response
           </button>
