--- a/dictionary/templates/dictionary/index.html
+++ b/dictionary/templates/dictionary/index.html
@@ -69,7 +69,10 @@
 
                             <h6 class="text-center">platform for creatives around the world</h6>
 
-                            <form method="get" class="custom-form mt-4 pt-2 mb-lg-0 mb-5" role="search">
+
+
+
+                            <form action="search"  method="get" class="custom-form mt-4 pt-2 mb-lg-0 mb-5" role="search">
                                 <div class="input-group input-group-lg">
                                     <span class="input-group-text bi-search" id="basic-addon1">
                                         
@@ -80,6 +83,9 @@
                                     <button type="submit" class="form-control">Search</button>
                                 </div>
                             </form>
+
+
+
                         </div>
 
                     </div>
