searching a word completed

--- a/dictionary/templates/dictionary/topics-listing.html
+++ b/dictionary/templates/dictionary/topics-listing.html
@@ -73,7 +73,7 @@
               >
                 <li>
                   <a class="dropdown-item active" href="topics-listing.html"
-                    >Topics Listing</a
+                    >{{word}}</a
                   >
                 </li>
 
@@ -104,12 +104,12 @@
                 </li>
 
                 <li class="breadcrumb-item active" aria-current="page">
-                  Topics Listing
+                  Hiiiii
                 </li>
               </ol>
             </nav>
 
-            <h2 class="text-white">Topics Listing</h2>
+            <h2 class="text-white">{{word}}</h2>
           </div>
         </div>
       </div>
