--- a/dictionary/templates/dictionary/topics-listing.html
+++ b/dictionary/templates/dictionary/topics-listing.html
@@ -109,7 +109,7 @@
               </ol>
             </nav>
 
-            <h2 class="text-white">{{word}}</h2>
+            <h2 class="text-white">{{word | title}}</h2>
           </div>
         </div>
       </div>
