--- a/dictionary/templates/dictionary/index.html
+++ b/dictionary/templates/dictionary/index.html
@@ -69,7 +69,7 @@
 
                             <h6 class="text-center">platform for creatives around the world</h6>
 
-                            <form action="search" class="custom-form mt-4 pt-2 mb-lg-0 mb-5" role="search">
+                            <form method="GET" action="search" class="custom-form mt-4 pt-2 mb-lg-0 mb-5" role="search">
                                 {% csrf_token %}
                                 <div class="input-group input-group-lg">
                                     <span class="input-group-text bi-search" id="basic-addon1">
