--- a/dictionary/templates/dictionary/topics-listing.html
+++ b/dictionary/templates/dictionary/topics-listing.html
@@ -27,7 +27,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-lg-5 me-lg-auto">
             <li class="nav-item">
-              <a class="nav-link click-scroll" href="index.html#section_1"
+              <a class="nav-link click-scroll" href="{% url "dictionary:index" %}"
                 >Home</a
               >
             </li>
@@ -98,7 +98,7 @@
         <div class="row align-items-center">
           <div class="col-lg-5 col-12">
             <nav aria-label="breadcrumb">
-              <ol class="breadcrumb">
+              {% comment %} <ol class="breadcrumb">
                 <li class="breadcrumb-item">
                   <a href="index.html">Homepage</a>
                 </li>
@@ -106,7 +106,7 @@
                 <li class="breadcrumb-item active" aria-current="page">
                   Hiiiii
                 </li>
-              </ol>
+              </ol> {% endcomment %}
             </nav>
 
             <h2 class="text-white">{{word | title}}</h2>
@@ -119,7 +119,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 col-12 text-center">
-            <h3 class="mb-4">Popular Topics</h3>
+            {% comment %} <h3 class="mb-4">Popular Topics</h3> {% endcomment %}
           </div>
 
           <div class="col-lg-8 col-12 mt-3 mx-auto">
@@ -127,30 +127,26 @@
               class="custom-block custom-block-topics-listing bg-white shadow-lg mb-5"
             >
               <div class="d-flex">
-                <img
+                {% comment %} <img
                   src="images/topics/undraw_Remote_design_team_re_urdx.png"
                   class="custom-block-image img-fluid"
                   alt=""
-                />
+                /> {% endcomment %}
 
                 <div class="custom-block-topics-listing-info d-flex">
                   <div>
-                    <h5 class="mb-2">Web Design</h5>
+                    <h5 class="mb-2">Meaning</h5>
 
-                    <p class="mb-0">
-                      Topic Listing includes home, listing, detail and contact
-                      pages. Feel free to modify this template for your custom
-                      websites.
-                    </p>
+                    <p class="mb-0">{{word}} : {{meaning}}</p>
 
-                    <a
+                    {% comment %} <a
                       href="topics-detail.html"
                       class="btn custom-btn mt-3 mt-lg-4"
                       >Learn More</a
-                    >
+                    > {% endcomment %}
                   </div>
 
-                  <span class="badge bg-design rounded-pill ms-auto">14</span>
+                  {% comment %} <span class="badge bg-design rounded-pill ms-auto">14</span> {% endcomment %}
                 </div>
               </div>
             </div>
@@ -159,32 +155,28 @@
               class="custom-block custom-block-topics-listing bg-white shadow-lg mb-5"
             >
               <div class="d-flex">
-                <img
+                {% comment %} <img
                   src="images/topics/undraw_online_ad_re_ol62.png"
                   class="custom-block-image img-fluid"
                   alt=""
-                />
+                /> {% endcomment %}
 
                 <div class="custom-block-topics-listing-info d-flex">
                   <div>
-                    <h5 class="mb-2">Advertising</h5>
+                    <h5 class="mb-2">synonym</h5>
 
-                    <p class="mb-0">
-                      Visit TemplateMo website to download free CSS templates.
-                      Lorem ipsum dolor, sit amet consectetur adipisicing elit
-                      animi necessitatibus
-                    </p>
+                    <p class="mb-0">{{word}} : {{synonyms}}</p>
 
-                    <a
+                    {% comment %} <a
                       href="topics-detail.html"
                       class="btn custom-btn mt-3 mt-lg-4"
                       >Learn More</a
-                    >
+                    > {% endcomment %}
                   </div>
 
-                  <span class="badge bg-advertising rounded-pill ms-auto"
-                    >30</span
-                  >
+                  {% comment %} <span class="badge bg-advertising rounded-pill ms-auto"
+                    >30</span> {% endcomment %}
+                  
                 </div>
               </div>
             </div>
@@ -193,35 +185,36 @@
               class="custom-block custom-block-topics-listing bg-white shadow-lg mb-5"
             >
               <div class="d-flex">
-                <img
+                {% comment %} <img
                   src="images/topics/undraw_Podcast_audience_re_4i5q.png"
                   class="custom-block-image img-fluid"
                   alt=""
-                />
+                /> {% endcomment %}
 
                 <div class="custom-block-topics-listing-info d-flex">
                   <div>
-                    <h5 class="mb-2">Podcast</h5>
+                    <h5 class="mb-2">antonym</h5>
 
-                    <p class="mb-0">
-                      Lorem ipsum dolor, sit amet consectetur adipisicing elit
-                      animi necessitatibus
-                    </p>
+                    <p class="mb-0">{{word}} :
+                      
+                      {% for antonym in antonyms %}{{antonym}}{% endfor %}
+                      
+                      {{antonyms}}</p>
 
-                    <a
+                    {% comment %} <a
                       href="topics-detail.html"
                       class="btn custom-btn mt-3 mt-lg-4"
                       >Learn More</a
-                    >
+                    > {% endcomment %}
                   </div>
 
-                  <span class="badge bg-music rounded-pill ms-auto">20</span>
+                  {% comment %} <span class="badge bg-music rounded-pill ms-auto">20</span> {% endcomment %}
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-12 col-12">
+          {% comment %} <div class="col-lg-12 col-12">
             <nav aria-label="Page navigation example">
               <ul class="pagination justify-content-center mb-0">
                 <li class="page-item">
@@ -257,7 +250,7 @@
                 </li>
               </ul>
             </nav>
-          </div>
+          </div> {% endcomment %}
         </div>
       </div>
     </section>
