--- a/dictionary/templates/dictionary/topics-listing.html
+++ b/dictionary/templates/dictionary/topics-listing.html
@@ -5,7 +5,7 @@
       <div class="container">
         <a class="navbar-brand" href="index.html">
           <i class="bi-back"></i>
-          <span>Topic</span>
+          <span>Dictionary</span>
         </a>
 
         <div class="d-lg-none ms-auto me-4">
