--- a/dictionary/templates/dictionary/index.html
+++ b/dictionary/templates/dictionary/index.html
@@ -681,19 +681,20 @@
                     <div class="col-lg-3 col-12 mb-4 pb-2">
                         <a class="navbar-brand mb-2" href="index.html">
                             <i class="bi-back"></i>
-                            <span>Topic</span>
+                            <span>website produced by : </span>
                         </a>
                     </div>
 
                     <div class="col-lg-3 col-md-4 col-6">
-                        <h6 class="site-footer-title mb-3">Resources</h6>
+                         <a href="http://zamanianmehdi23blogproject.pythonanywhere.com/#">
+                        <h6 class="site-footer-title mb-3">MehdiZamanian</h6></a>
 
                         <ul class="site-footer-links">
                             <li class="site-footer-link-item">
-                                <a href="#" class="site-footer-link">Home</a>
+                                <a href="https://github.com/Mehdizamanian?tab=repositories" class="site-footer-link">GitHub</a>
                             </li>
 
-                            <li class="site-footer-link-item">
+<!--                             <li class="site-footer-link-item">
                                 <a href="#" class="site-footer-link">How it works</a>
                             </li>
 
@@ -703,11 +704,12 @@
 
                             <li class="site-footer-link-item">
                                 <a href="#" class="site-footer-link">Contact</a>
-                            </li>
+                            </li> -->
+                            
                         </ul>
                     </div>
 
-                    <div class="col-lg-3 col-md-4 col-6 mb-4 mb-lg-0">
+<!--                     <div class="col-lg-3 col-md-4 col-6 mb-4 mb-lg-0">
                         <h6 class="site-footer-title mb-3">Information</h6>
 
                         <p class="text-white d-flex mb-1">
@@ -721,9 +723,11 @@
                                 info@company.com
                             </a>
                         </p>
-                    </div>
+                    </div> -->
 
-                    <div class="col-lg-3 col-md-4 col-12 mt-4 mt-lg-0 ms-auto">
+
+
+<!--                     <div class="col-lg-3 col-md-4 col-12 mt-4 mt-lg-0 ms-auto">
                         <div class="dropdown">
                             <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                             English</button>
@@ -743,6 +747,6 @@
                     </div>
 
                 </div>
-            </div>
+            </div> -->
         </footer>
         {% endblock %}
