--- a/dictionary/templates/dictionary/index.html
+++ b/dictionary/templates/dictionary/index.html
@@ -172,9 +172,12 @@
                     <div class="row">
                         <ul class="nav nav-tabs" id="myTab" role="tablist">
                             <li class="nav-item" role="presentation">
-                                <button class="nav-link active" id="design-tab" data-bs-toggle="tab" data-bs-target="#design-tab-pane" type="button" role="tab" aria-controls="design-tab-pane" aria-selected="true">Design</button>
+                                <button class="nav-link active" id="design-tab" data-bs-toggle="tab" data-bs-target="#design-tab-pane" type="button" role="tab" aria-controls="design-tab-pane" aria-selected="true">Apps</button>
                             </li>
 
+
+
+<!-- 
                             <li class="nav-item" role="presentation">
                                 <button class="nav-link" id="marketing-tab" data-bs-toggle="tab" data-bs-target="#marketing-tab-pane" type="button" role="tab" aria-controls="marketing-tab-pane" aria-selected="false">Marketing</button>
                             </li>
@@ -190,6 +193,9 @@
                             <li class="nav-item" role="presentation">
                                 <button class="nav-link" id="education-tab" data-bs-toggle="tab" data-bs-target="#education-tab-pane" type="button" role="tab" aria-controls="education-tab-pane" aria-selected="false">Education</button>
                             </li>
+
+ -->
+
                         </ul>
                     </div>
                 </div>
@@ -258,6 +264,7 @@
                                     </div>
                                 </div>
 
+<!-- 
                                 <div class="tab-pane fade" id="marketing-tab-pane" role="tabpanel" aria-labelledby="marketing-tab" tabindex="0">
                                     <div class="row">
                                         <div class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-3">
@@ -314,8 +321,12 @@
                                                 </div>
                                             </div>
                                         </div>
-                                  </div>
+                                  </div> -->
 
+
+
+
+<!-- 
                                 <div class="tab-pane fade" id="finance-tab-pane" role="tabpanel" aria-labelledby="finance-tab" tabindex="0">   <div class="row">
                                         <div class="col-lg-6 col-md-6 col-12 mb-4 mb-lg-0">
                                             <div class="custom-block bg-white shadow-lg">
@@ -377,9 +388,12 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
 
-                                <div class="tab-pane fade" id="music-tab-pane" role="tabpanel" aria-labelledby="music-tab" tabindex="0">
+
+
+
+                               <!--  <div class="tab-pane fade" id="music-tab-pane" role="tabpanel" aria-labelledby="music-tab" tabindex="0">
                                     <div class="row">
                                         <div class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-3">
                                             <div class="custom-block bg-white shadow-lg">
@@ -435,9 +449,14 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
 
-                                <div class="tab-pane fade" id="education-tab-pane" role="tabpanel" aria-labelledby="education-tab" tabindex="0">
+
+
+
+
+
+                                <!-- <div class="tab-pane fade" id="education-tab-pane" role="tabpanel" aria-labelledby="education-tab" tabindex="0">
                                     <div class="row">
                                         <div class="col-lg-6 col-md-6 col-12 mb-4 mb-lg-3">
                                             <div class="custom-block bg-white shadow-lg">
@@ -480,10 +499,14 @@
 
                     </div>
                 </div>
-            </section>
+            </section> -->
 
 
-            <section class="timeline-section section-padding" id="section_3">
+
+
+
+
+<!--             <section class="timeline-section section-padding" id="section_3">
                 <div class="section-overlay"></div>
 
                 <div class="container">
@@ -541,10 +564,10 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> -->
 
 
-            <section class="faq-section section-padding" id="section_4">
+<!--             <section class="faq-section section-padding" id="section_4">
                 <div class="container">
                     <div class="row">
 
@@ -606,10 +629,10 @@
 
                     </div>
                 </div>
-            </section>
+            </section> -->
 
 
-            <section class="contact-section section-padding section-bg" id="section_5">
+            <!-- <section class="contact-section section-padding section-bg" id="section_5">
                 <div class="container">
                     <div class="row">
 
@@ -671,14 +694,18 @@
 
                     </div>
                 </div>
-            </section>
+            </section> -->
+
         </main>
+
+
+
 
 <footer class="site-footer section-padding">
             <div class="container">
                 <div class="row">
 
-                    <div class="col-lg-3 col-12 mb-4 pb-2">
+                    <div class="col-lg-12 col-12 mb-4 pb-2">
                         <a class="navbar-brand mb-2" href="index.html">
                             <i class="bi-back"></i>
                             <span>website produced by : </span>
