--- a/dictionary/templates/dictionary/index.html
+++ b/dictionary/templates/dictionary/index.html
@@ -30,10 +30,12 @@
                             </li>
     
                             <li class="nav-item">
-                                <a class="nav-link click-scroll" href="#section_3">How it works</a>
+                                <a class="nav-link click-scroll" href="#section_3">about</a>
                             </li>
 
-                            <li class="nav-item">
+
+
+                            <!-- <li class="nav-item">
                                 <a class="nav-link click-scroll" href="#section_4">FAQs</a>
                             </li>
     
@@ -49,7 +51,11 @@
 
                                     <li><a class="dropdown-item" href="contact.html">Contact Form</a></li>
                                 </ul>
-                            </li>
+                            </li> -->
+
+
+
+
                         </ul>
 
                         <div class="d-none d-lg-block">
@@ -702,6 +708,7 @@
 
 
 <footer class="site-footer section-padding">
+    <section  id="section_3">
             <div class="container">
                 <div class="row">
 
@@ -775,5 +782,6 @@
 
                 </div>
             </div> -->
+            </section>
         </footer>
         {% endblock %}
