--- a/dictionary/templates/dictionary/base.html
+++ b/dictionary/templates/dictionary/base.html
@@ -16,12 +16,16 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&family=Open+Sans&display=swap" rel="stylesheet">
+
+        
                         
         <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
 
         <link href="{% static "css/bootstrap-icons.css" %}" rel="stylesheet">
 
-        <link href="{% static "css/templatemo-topic-listing.css" %}" rel="stylesheet">      
+        <link href="{% static "css/templatemo-topic-listing.css" %}" rel="stylesheet">     
+<link href="{% static "css/stylesheet.css" %}" rel="stylesheet">
+         
 <!--
 
 TemplateMo 590 topic listing
