--- a/dictionary/templates/dictionary/index.html
+++ b/dictionary/templates/dictionary/index.html
@@ -4,11 +4,11 @@
         {% block content %}
         <main>
 
-            <nav class="navbar navbar-expand-lg">
+            <nav class="navbar navbar-expand-lg" style="background-color: blue;">
                 <div class="container">
                     <a class="navbar-brand" href="index.html">
-                        <i class="bi-book"></i>
-                        <span>Dictionary</span>
+                        <i class="bi-book text-white"></i>
+                        <span class="text-white">Dictionary</span>
                     </a>
 
                     <div class="d-lg-none ms-auto me-4">
@@ -71,9 +71,9 @@
                     <div class="row">
 
                         <div class="col-lg-8 col-12 mx-auto">
-                            <h1 class="text-white text-center">Online Dictionary</h1>
+                            <h1 class="text-white text-center ">Online Dictionary</h1>
 
-                            <h6 class="text-center">discover . search . learn . enjoy</h6>
+                            <h6 class="text-center text-white "><em>discover . search . learn . enjoy</em></h6>
 
                             <form method="GET" action="search" class="custom-form mt-4 pt-2 mb-lg-0 mb-5" role="search">
                                 {% csrf_token %}
@@ -82,7 +82,7 @@
                                         
                                     </span>
 
-                                    <input name="word" type="search" class="form-control" id="keyword" placeholder="Word ..." aria-label="Search">
+                                    <input  name="word" type="search" class="form-control" id="keyword" placeholder="Word ..." aria-label="Search"  >
 
                                     <button type="submit" class="form-control">Search</button>
                                 </div>
