--- a/static/css/templatemo-topic-listing.css
+++ b/static/css/templatemo-topic-listing.css
@@ -247,11 +247,11 @@ strong {
 /*---------------------------------------
   SITE HEADER              
 -----------------------------------------*/
-.site-header {
-  background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
+/*.site-header {
+  background-color: red !important;
   padding-top: 150px;
   padding-bottom: 80px;
-}
+}*/
 
 .site-header .container {
   height: 100%;
