--- a/dictionary/templates/dictionary/base.html
+++ b/dictionary/templates/dictionary/base.html
@@ -23,8 +23,9 @@
 
         <link href="{% static "css/bootstrap-icons.css" %}" rel="stylesheet">
 
-        <link href="{% static "css/templatemo-topic-listing.css" %}" rel="stylesheet">     
-<link href="{% static "css/stylesheet.css" %}" rel="stylesheet">
+        <link href="{% static "css/templatemo-topic-listing.css" %}" rel="stylesheet">   
+
+        <link href="{% static "css/stylesheet.css" %}" rel="stylesheet">
          
 <!--
 
@@ -778,6 +779,75 @@ https://templatemo.com/tm-590-topic-listing
                 </div>
             </div>
         </footer> {% endcomment %}
+
+        <main>
+
+            <nav class="navbar navbar-expand-lg" style="background-color: blue;">
+                <div class="container">
+                    <a class="navbar-brand" href="index.html">
+                        <i class="bi-book text-white"></i>
+                        <span class="text-white">Dictionary</span>
+                    </a>
+
+                    <div class="d-lg-none ms-auto me-4">
+                        <a href="#top" class="navbar-icon bi-person smoothscroll"></a>
+                    </div>
+    
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+    
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav ms-lg-5 me-lg-auto">
+                            <li class="nav-item">
+                                <a class="nav-link click-scroll" href="#section_1">Home</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link click-scroll" href="#section_2">Browse Topics</a>
+                            </li>
+    
+                            <li class="nav-item">
+                                <a class="nav-link click-scroll" href="#section_3">about</a>
+                            </li>
+
+
+
+                            <!-- <li class="nav-item">
+                                <a class="nav-link click-scroll" href="#section_4">FAQs</a>
+                            </li>
+    
+                            <li class="nav-item">
+                                <a class="nav-link click-scroll" href="#section_5">Contact</a>
+                            </li>
+
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarLightDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">Pages</a>
+
+                                <ul class="dropdown-menu dropdown-menu-light" aria-labelledby="navbarLightDropdownMenuLink">
+                                    <li><a class="dropdown-item" href="topics-listing.html">Topics Listing</a></li>
+
+                                    <li><a class="dropdown-item" href="contact.html">Contact Form</a></li>
+                                </ul>
+                            </li> -->
+
+
+
+
+                        </ul>
+
+                        <div class="d-none d-lg-block">
+                            <a href="#top" class="navbar-icon bi-person smoothscroll"></a>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+
+
+
+            
+
+
 
 {% block content %} {% endblock %}
         <!-- JAVASCRIPT FILES -->
