--- a/dictionary/templates/dictionary/topics-listing.html
+++ b/dictionary/templates/dictionary/topics-listing.html
@@ -1,38 +1,42 @@
 {% extends "dictionary/base.html" %} {% load static %} {% block content %}
+
 <body class="topics-listing-page" id="top">
-  <main>
-    <nav class="navbar navbar-expand-lg">
-      <div class="container">
-        <a class="navbar-brand" href="index.html">
-          <i class="bi-back"></i>
-          <span>Dictionary</span>
-        </a>
+  
 
-        <div class="d-lg-none ms-auto me-4">
-          <a href="#top" class="navbar-icon bi-person smoothscroll"></a>
+
+  <section  class="hero-section d-flex justify-content-center align-items-left" id="section_1" style="padding-top: 100px;
+  padding-bottom: 15px;">
+    <div class="container">
+        <div class="row">
+
+            <div class="col-lg-8 col-12 mx-auto">
+                <h1 class="text-white text-left float-left"> {{word |title}} </h1>
+
+                <a href="{% url "dictionary:index" %}"> <h6 class="text-center text-white float-right mt-3 "><em style="margin-left:12.5rem">Try Another Word</em></h6></a>
+
+                <form method="GET"  class="custom-form mt-4 pt-2 mb-lg-0 mb-5" role="search">
+                    {% csrf_token %}
+                    <div class="input-group input-group-lg">
+                        <span class="input-group-text bi-search" id="basic-addon1">
+                            
+                        </span>
+
+                        <input  name="word" type="search" class="form-control" id="keyword" placeholder="Word ..." aria-label="Search"  >
+
+                        <button type="submit" class="form-control">Search</button>
+                    </div>
+                </form>
+            </div>
+
         </div>
+    </div>
+</section>
 
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
 
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-lg-5 me-lg-auto">
-            <li class="nav-item">
-              <a class="nav-link click-scroll" href="{% url "dictionary:index" %}"
-                >Home</a
-              >
-            </li>
 
-            <li class="nav-item">
+
+
+<!--             <li class="nav-item">
               <a class="nav-link click-scroll" href="index.html#section_2"
                 >Browse Topics</a
               >
@@ -65,10 +69,12 @@
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
                 >Pages</a
-              >
+              > -->
 
-              <ul
-                class="dropdown-menu dropdown-menu-light"
+            {% comment %} <div class ="bg bg-danger "style="background-color:red">
+
+              <ul 
+                class="dropdown-menu dropdown-menu-danger"
                 aria-labelledby="navbarLightDropdownMenuLink"
               >
                 <li>
@@ -83,16 +89,20 @@
               </ul>
             </li>
           </ul>
+        </div>
+
+ {% endcomment %}
+
 
           <div class="d-none d-lg-block">
-            <a href="#top" class="navbar-icon bi-person smoothscroll"></a>
+            {% comment %} <a href="#top" class="navbar-icon bi-person smoothscroll"></a> {% endcomment %}
           </div>
         </div>
       </div>
     </nav>
 
-    <header
-      class="site-header d-flex flex-column justify-content-center align-items-center"
+    {% comment %} <header
+      class="site-header d-flex flex-column justify-content-center align-items-center bg-danger" style="background-color:red;"
     >
       <div class="container">
         <div class="row align-items-center">
@@ -107,13 +117,15 @@
                   Hiiiii
                 </li>
               </ol> {% endcomment %}
-            </nav>
+            {% comment %} </nav>
 
             <h2 class="text-white">{{word | title}}</h2>
           </div>
         </div>
       </div>
-    </header>
+    </header> {% endcomment %}
+ {% comment %} {% endcomment %} 
+
 
     <section class="section-padding">
       <div class="container">
@@ -151,6 +163,8 @@
               </div>
             </div>
 
+
+            
             <div
               class="custom-block custom-block-topics-listing bg-white shadow-lg mb-5"
             >
@@ -181,6 +195,8 @@
               </div>
             </div>
 
+
+            
             <div
               class="custom-block custom-block-topics-listing bg-white shadow-lg mb-5"
             >
@@ -255,175 +271,8 @@
       </div>
     </section>
 
-    <section class="section-padding section-bg">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 col-12">
-            <h3 class="mb-4">Trending Topics</h3>
-          </div>
+    
 
-          <div class="col-lg-6 col-md-6 col-12 mt-3 mb-4 mb-lg-0">
-            <div class="custom-block bg-white shadow-lg">
-              <a href="topics-detail.html">
-                <div class="d-flex">
-                  <div>
-                    <h5 class="mb-2">Investment</h5>
-
-                    <p class="mb-0">Lorem Ipsum dolor sit amet consectetur</p>
-                  </div>
-
-                  <span class="badge bg-finance rounded-pill ms-auto">30</span>
-                </div>
-
-                <img
-                  src="images/topics/undraw_Finance_re_gnv2.png"
-                  class="custom-block-image img-fluid"
-                  alt=""
-                />
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-6 col-md-6 col-12 mt-lg-3">
-            <div class="custom-block custom-block-overlay">
-              <div class="d-flex flex-column h-100">
-                <img
-                  src="images/businesswoman-using-tablet-analysis.jpg"
-                  class="custom-block-image img-fluid"
-                  alt=""
-                />
-
-                <div class="custom-block-overlay-text d-flex">
-                  <div>
-                    <h5 class="text-white mb-2">Finance</h5>
-
-                    <p class="text-white">
-                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                      Sint animi necessitatibus aperiam repudiandae nam omnis
-                    </p>
-
-                    <a
-                      href="topics-detail.html"
-                      class="btn custom-btn mt-2 mt-lg-3"
-                      >Learn More</a
-                    >
-                  </div>
-
-                  <span class="badge bg-finance rounded-pill ms-auto">25</span>
-                </div>
-
-                <div class="social-share d-flex">
-                  <p class="text-white me-4">Share:</p>
-
-                  <ul class="social-icon">
-                    <li class="social-icon-item">
-                      <a href="#" class="social-icon-link bi-twitter"></a>
-                    </li>
-
-                    <li class="social-icon-item">
-                      <a href="#" class="social-icon-link bi-facebook"></a>
-                    </li>
-
-                    <li class="social-icon-item">
-                      <a href="#" class="social-icon-link bi-pinterest"></a>
-                    </li>
-                  </ul>
-
-                  <a href="#" class="custom-icon bi-bookmark ms-auto"></a>
-                </div>
-
-                <div class="section-overlay"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <footer class="site-footer section-padding">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-3 col-12 mb-4 pb-2">
-          <a class="navbar-brand mb-2" href="index.html">
-            <i class="bi-back"></i>
-            <span>Topic</span>
-          </a>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-6">
-          <h6 class="site-footer-title mb-3">Resources</h6>
-
-          <ul class="site-footer-links">
-            <li class="site-footer-link-item">
-              <a href="#" class="site-footer-link">Home</a>
-            </li>
-
-            <li class="site-footer-link-item">
-              <a href="#" class="site-footer-link">How it works</a>
-            </li>
-
-            <li class="site-footer-link-item">
-              <a href="#" class="site-footer-link">FAQs</a>
-            </li>
-
-            <li class="site-footer-link-item">
-              <a href="#" class="site-footer-link">Contact</a>
-            </li>
-          </ul>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-6 mb-4 mb-lg-0">
-          <h6 class="site-footer-title mb-3">Information</h6>
-
-          <p class="text-white d-flex mb-1">
-            <a href="tel: 305-240-9671" class="site-footer-link">
-              305-240-9671
-            </a>
-          </p>
-
-          <p class="text-white d-flex">
-            <a href="mailto:info@company.com" class="site-footer-link">
-              info@company.com
-            </a>
-          </p>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-12 mt-4 mt-lg-0 ms-auto">
-          <div class="dropdown">
-            <button
-              class="btn btn-secondary dropdown-toggle"
-              type="button"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >
-              English
-            </button>
-
-            <ul class="dropdown-menu">
-              <li><button class="dropdown-item" type="button">Thai</button></li>
-
-              <li>
-                <button class="dropdown-item" type="button">Myanmar</button>
-              </li>
-
-              <li>
-                <button class="dropdown-item" type="button">Arabic</button>
-              </li>
-            </ul>
-          </div>
-
-          <p class="copyright-text mt-lg-5 mt-4">
-            Copyright © 2048 Topic Listing Center. All rights reserved.
-            <br /><br />Design:
-            <a rel="nofollow" href="https://templatemo.com" target="_blank"
-              >TemplateMo</a
-            >
-          </p>
-        </div>
-      </div>
-    </div>
-  </footer>
 
   <!-- JAVASCRIPT FILES -->
   <script src="js/jquery.min.js"></script>
@@ -432,3 +281,197 @@
   <script src="js/custom.js"></script>
 </body>
 {% endblock %}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+{% comment %} 
+<section class="section-padding section-bg">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 col-12">
+        <h3 class="mb-4">Trending Topics</h3>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-12 mt-3 mb-4 mb-lg-0">
+        <div class="custom-block bg-white shadow-lg">
+          <a href="topics-detail.html">
+            <div class="d-flex">
+              <div>
+                <h5 class="mb-2">Investment</h5>
+
+                <p class="mb-0">Lorem Ipsum dolor sit amet consectetur</p>
+              </div>
+
+              <span class="badge bg-finance rounded-pill ms-auto">30</span>
+            </div>
+
+            <img
+              src="images/topics/undraw_Finance_re_gnv2.png"
+              class="custom-block-image img-fluid"
+              alt=""
+            />
+          </a>
+        </div>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-12 mt-lg-3">
+        <div class="custom-block custom-block-overlay">
+          <div class="d-flex flex-column h-100">
+            <img
+              src="images/businesswoman-using-tablet-analysis.jpg"
+              class="custom-block-image img-fluid"
+              alt=""
+            />
+
+            <div class="custom-block-overlay-text d-flex">
+              <div>
+                <h5 class="text-white mb-2">Finance</h5>
+
+                <p class="text-white">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Sint animi necessitatibus aperiam repudiandae nam omnis
+                </p>
+
+                <a
+                  href="topics-detail.html"
+                  class="btn custom-btn mt-2 mt-lg-3"
+                  >Learn More</a
+                >
+              </div>
+
+              <span class="badge bg-finance rounded-pill ms-auto">25</span>
+            </div>
+
+            <div class="social-share d-flex">
+              <p class="text-white me-4">Share:</p>
+
+              <ul class="social-icon">
+                <li class="social-icon-item">
+                  <a href="#" class="social-icon-link bi-twitter"></a>
+                </li>
+
+                <li class="social-icon-item">
+                  <a href="#" class="social-icon-link bi-facebook"></a>
+                </li>
+
+                <li class="social-icon-item">
+                  <a href="#" class="social-icon-link bi-pinterest"></a>
+                </li>
+              </ul>
+
+              <a href="#" class="custom-icon bi-bookmark ms-auto"></a>
+            </div>
+
+            <div class="section-overlay"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+</main>
+
+<footer class="site-footer section-padding">
+<div class="container">
+  <div class="row">
+    <div class="col-lg-3 col-12 mb-4 pb-2">
+      <a class="navbar-brand mb-2" href="index.html">
+        <i class="bi-back"></i>
+        <span>Topic</span>
+      </a>
+    </div>
+
+    <div class="col-lg-3 col-md-4 col-6">
+      <h6 class="site-footer-title mb-3">Resources</h6>
+
+      <ul class="site-footer-links">
+        <li class="site-footer-link-item">
+          <a href="#" class="site-footer-link">Home</a>
+        </li>
+
+        <li class="site-footer-link-item">
+          <a href="#" class="site-footer-link">How it works</a>
+        </li>
+
+        <li class="site-footer-link-item">
+          <a href="#" class="site-footer-link">FAQs</a>
+        </li>
+
+        <li class="site-footer-link-item">
+          <a href="#" class="site-footer-link">Contact</a>
+        </li>
+      </ul>
+    </div>
+
+    <div class="col-lg-3 col-md-4 col-6 mb-4 mb-lg-0">
+      <h6 class="site-footer-title mb-3">Information</h6>
+
+      <p class="text-white d-flex mb-1">
+        <a href="tel: 305-240-9671" class="site-footer-link">
+          305-240-9671
+        </a>
+      </p>
+
+      <p class="text-white d-flex">
+        <a href="mailto:info@company.com" class="site-footer-link">
+          info@company.com
+        </a>
+      </p>
+    </div>
+
+    <div class="col-lg-3 col-md-4 col-12 mt-4 mt-lg-0 ms-auto">
+      <div class="dropdown">
+        <button
+          class="btn btn-secondary dropdown-toggle"
+          type="button"
+          data-bs-toggle="dropdown"
+          aria-expanded="false"
+        >
+          English
+        </button>
+
+        <ul class="dropdown-menu">
+          <li><button class="dropdown-item" type="button">Thai</button></li>
+
+          <li>
+            <button class="dropdown-item" type="button">Myanmar</button>
+          </li>
+
+          <li>
+            <button class="dropdown-item" type="button">Arabic</button>
+          </li>
+        </ul>
+      </div>
+
+      <p class="copyright-text mt-lg-5 mt-4">
+        Copyright © 2048 Topic Listing Center. All rights reserved.
+        <br /><br />Design:
+        <a rel="nofollow" href="https://templatemo.com" target="_blank"
+          >TemplateMo</a
+        >
+      </p>
+    </div>
+  </div>
+</div>
+</footer> {% endcomment %}
