--- a/dictionary/templates/dictionary/base.html
+++ b/dictionary/templates/dictionary/base.html
@@ -8,7 +8,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Dictionary </title>
+        <title>DictKnow </title>
 
         <!-- CSS FILES -->        
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -786,7 +786,7 @@ https://templatemo.com/tm-590-topic-listing
                 <div class="container">
                     <a class="navbar-brand" href="index.html">
                         <i class="bi-book text-white"></i>
-                        <span class="text-white">Dictionary</span>
+                        <span class="text-white"><em>DictKnow</em></span>
                     </a>
 
                     <div class="d-lg-none ms-auto me-4">
@@ -808,7 +808,7 @@ https://templatemo.com/tm-590-topic-listing
                             </li>
     
                             <li class="nav-item">
-                                <a class="nav-link click-scroll" href="#section_3">about</a>
+                                <a class="nav-link click-scroll" href="http://zamanianmehdi23blogproject.pythonanywhere.com/#">about</a>
                             </li>
 
 
@@ -864,7 +864,7 @@ https://templatemo.com/tm-590-topic-listing
                     <div class="col-lg-12 col-12 mb-4 pb-2">
                         <a class="navbar-brand mb-2" href="index.html">
                             <i class="bi-back"></i>
-                            <span>website produced by : </span>
+                            <span>website produced by </span>
                         </a>
                     </div>
 
